--- a/ReactOsman/package.json
+++ b/ReactOsman/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "ReactOsman",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,17 +11,38 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "debounce": "^1.2.0",
+   
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
+
+  "build": {
+    "appId": "ReactOsman",
+    "extends": null,
+    "mac": {
+      "category": "your.app.category.type"
+    },
+    "directories":{
+      "buildResources": "./dist/*",
+      "output":"release"
+    },
+    "extraMetadata":{
+      
+      "main" : "./dist/main.js",
+      "author":"Osman Aslancan"
+
+    },
+    "files":["./dist/*"]
+    
+  },
+  
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "webpack",
+    "start": "npm run build && electron dist/main.js",
+    "electron-build": "npm run build && electron-builder"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +63,15 @@
     ]
   },
   "devDependencies": {
-    "@types/debounce": "^1.2.0"
+    "@types/debounce": "^1.2.0",
+    "css-loader": "^5.0.1",
+    "electron": "^11.1.0",
+    "electron-packager": "^15.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "ts-loader": "^8.0.12",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0"
   }
 }
