--- a/ReactOsman/tsconfig.json
+++ b/ReactOsman/tsconfig.json
@@ -17,8 +17,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "noEmit": false,
+   // "jsx": "react-jsx"
+
+   "jsx": "react",
+   "baseUrl": "./",
+   "paths": {
+     "@/*": [
+       "src/*"
+     ]
+   },
   },
   "include": [
     "src"
